# QUANTARA

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  requirements.txt
.agents/: AGENTS.md
.github/workflows/: auto_paper_trading.yml  ci.yml
ai/: README.md
ai/src/: __init__.py  memory.py  mentor.py  rag.py  tools.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  redis.py
backend/app/services/: cache.py
database/: README.md  schema.sql  seed.sql
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: api.md  architecture.md  database.md  performance_report.md  roadmap.md  survivorship_bias_audit.md  validation_journal.md
infrastructure/: README.md
ml/: README.md
ml/datasets/: ACC.parquet  ADANIENT.parquet  ADANIPORTS.parquet  AMBUJACEM.parquet  APOLLOHOSP.parquet  ASIANPAINT.parquet  AUROPHARMA.parquet  AXISBANK.parquet  BAJAJ-AUTO.parquet  BAJAJFINSV.parquet  BAJFINANCE.parquet  BANKBARODA.parquet  BEL.parquet  BHARTIARTL.parquet  BHEL.parquet  BOSCHLTD.parquet  BPCL.parquet  BRITANNIA.parquet  CIPLA.parquet  COALINDIA.parquet  DIVISLAB.parquet  EICHERMOT.parquet  GAIL.parquet  GRASIM.parquet  HCLTECH.parquet  HDFCBANK.parquet  HDFCLIFE.parquet  HEROMOTOCO.parquet  HINDALCO.parquet  HINDUNILVR.parquet  ICICIBANK.parquet  IDEA.parquet  INDUSINDBK.parquet  INFY.parquet  IOC.parquet  ITC.parquet  JIOFIN.parquet  (+28 more)
models/: feature_metadata.json  profit_feature_metadata.json  profit_rf.pkl  profit_xgb.pkl  return_feature_metadata.json  return_quantile_models.pkl  risk_feature_metadata.json  risk_gb.pkl  trend_lightgbm.pkl  trend_xgboost.pkl
paper_trading/: closed_positions.csv  daily_signals.csv  equity_curve.csv  open_positions.csv  performance_metrics.csv
paper_trading_dashboard/: index.html
(+175 files in other folders)
