[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Quantara FastAPI backend service"
authors = ["Krishna Gupta <krishna27gupta06@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.30.0"
redis = "^5.0.7"
pandas = "^3.0.3"
numpy = "^2.5.1"
scikit-learn = "1.5.1"
xgboost = "3.3.0"
yfinance = "^1.5.1"
pyarrow = "^25.0.0"
lightgbm = "4.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []
